--- a/plugins/google-play-services/in-app-reviews/getting_started.html
+++ b/plugins/google-play-services/in-app-reviews/getting_started.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Android Sensors</title>
+    <title>UE Plugin | In App Reviews</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -61,7 +61,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
                         aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/saved-games/overview.html">
+                            <a class="dropdown-item" href="../saved-games/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/events/overview.html">
+                            <a class="dropdown-item" href="../events/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/billing/overview.html">
+                            <a class="dropdown-item" href="../billing/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
                                         class="dropdown-item-image">
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-reviews/overview.html">
+                            <a class="dropdown-item" href="overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
@@ -150,33 +150,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_availability.html">
-                                Checking Sensor Availability
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="register_sensor.html">
-                                Registering a Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="deregister_sensor.html">
-                                Deregistering a Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_listener.html">
-                                Setup Sensor Event Listener
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_nodes.html">
-                                Supporting Nodes
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="example.html">
-                                Example Setup
+                            <a class="nav-link inactive" href="launch_review.html">
+                                Launch In App Review
                             </a>
                         </li>
                         <hr />
@@ -184,23 +159,13 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor.html">
-                                Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_event.html">
-                                Sensor Event
+                            <a class="nav-link inactive" href="review_error.html">
+                                Review Error
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="enumerations.html">
                                 Enumerations
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_structs.html">
-                                Supporting Structs
                             </a>
                         </li>
                         <hr />
@@ -239,23 +204,23 @@
                                 Go to the Library tab and find the plugin and add it to the engine.
                             </p>
                             <li class="list-group-item">
-                                Enable Android Sensors Plugin
+                                Enable Play Services Reviews Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In Unreal Engine, the plugin will be available in the plugins section.</br>
                                 Go to <span style="font-weight: 500">Settings</span> -> <span
                                     style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Android Sensors</span>" and ensure it is enabled.
+                                    style="font-weight: 500">Play Services Reviews</span>" and ensure it is enabled.
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 80%" src="../../../images/AndroidSensors/Android_Sensors_Plugin_Enabled.png">
+                                    <img style="max-width: 80%" src="../../../images/InAppReviews/InAppReviews_Plugin_Enabled.png">
                                 </div>
                             </div>
                         </ol>
                     </div>
                 </div>
-                <div style="margin-bottom: 450px">
+                <div style="margin-bottom: 350px">
                 </div>
             </main>
         </div>
