--- a/plugins/android-native/sensors/sensor.html
+++ b/plugins/android-native/sensors/sensor.html
@@ -97,6 +97,18 @@
                             </a>
                         </li>
                         <li>
+                            <a class="dropdown-item" href="../../google-play-services/in-app-reviews/overview.html">
+                                <div class="dropdown-item-content">
+                                    <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
+                                        class="dropdown-item-image">
+                                    <div class="dropdown-item-text">
+                                        Play: Reviews
+                                        <span class="dropdown-item-subtext">Android Plugin</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
                             <a class="dropdown-item" href="../../android-native/sensors/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors"
