--- a/plugins/google-play-services/in-app-reviews/enumerations.html
+++ b/plugins/google-play-services/in-app-reviews/enumerations.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Android Sensors</title>
+    <title>UE Plugin | In App Reviews</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -61,7 +61,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
                         aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/saved-games/overview.html">
+                            <a class="dropdown-item" href="../saved-games/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/events/overview.html">
+                            <a class="dropdown-item" href="../events/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/billing/overview.html">
+                            <a class="dropdown-item" href="../billing/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
                                         class="dropdown-item-image">
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-reviews/overview.html">
+                            <a class="dropdown-item" href="overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
@@ -145,38 +145,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="getting_started.html">
+                            <a class="nav-link inactive" href="getting_started.html">
                                 Getting Started
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_availability.html">
-                                Checking Sensor Availability
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="register_sensor.html">
-                                Registering a Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="deregister_sensor.html">
-                                Deregistering a Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_listener.html">
-                                Setup Sensor Event Listener
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_nodes.html">
-                                Supporting Nodes
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="example.html">
-                                Example Setup
+                            <a class="nav-link inactive" href="launch_review.html">
+                                Launch In App Review
                             </a>
                         </li>
                         <hr />
@@ -184,23 +159,13 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor.html">
-                                Sensor
+                            <a class="nav-link inactive" href="review_error.html">
+                                Review Error
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_event.html">
-                                Sensor Event
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="enumerations.html">
+                            <a class="nav-link active" href="enumerations.html">
                                 Enumerations
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_structs.html">
-                                Supporting Structs
                             </a>
                         </li>
                         <hr />
@@ -219,43 +184,59 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Getting Started</h1>
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom;">
+                    <h1 class="h2 text-white-shadow">Enumerations</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <ol class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                Purchase the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Link will be enabled once plugin is live!).
-                            </p>
-                            <li class="list-group-item">
-                                Install the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
-                                Go to the Library tab and find the plugin and add it to the engine.
-                            </p>
-                            <li class="list-group-item">
-                                Enable Android Sensors Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In Unreal Engine, the plugin will be available in the plugins section.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span
-                                    style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Android Sensors</span>" and ensure it is enabled.
-                            </p>
-                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                                <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 80%" src="../../../images/AndroidSensors/Android_Sensors_Plugin_Enabled.png">
-                                </div>
-                            </div>
-                        </ol>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            Here is a list of enumerations you will find throughout the plugin. At this stage there is only one. </br>
+                            These enumerations are named after the same enumerations/constants found in the play services core library.
+                        </p>
                     </div>
                 </div>
-                <div style="margin-bottom: 450px">
+                <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h3 text-white-shadow">EReviewErrorCode</h1>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
+                    <table class="table table-striped table-bordered table-documentation"
+                        style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Name</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>NO_ERROR</td>
+                                <td style="min-width: 300px">
+                                    When no error occurs (this is a default value and should not occur).
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PLAY_STORE_NOT_FOUND</td>
+                                <td>
+                                    No Play Store app is found on device or an unofficial version is installed.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>INVALID_REQUEST</td>
+                                <td>
+                                    The request made to the google API is invalid.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>INTERNAL_ERROR</td>
+                                <td>
+                                    An unknown internal error.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div style="margin-bottom: 550px">
                 </div>
             </main>
         </div>
