--- a/plugins/google-play-services/in-app-reviews/launch_review.html
+++ b/plugins/google-play-services/in-app-reviews/launch_review.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Billing</title>
+    <title>UE Plugin | In App Reviews</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="overview.html">
+                            <a class="dropdown-item" href="../billing/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
                                         class="dropdown-item-image">
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../in-app-reviews/overview.html">
+                            <a class="dropdown-item" href="overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
@@ -150,38 +150,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="query_product_details.html">
-                                Query Product Details
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="launch_billing_flow.html">
-                                Launch Billing Flow
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="check_for_purchases.html">
-                                Check for Purchases
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="query_purchase_history.html">
-                                Query Purchase History
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="query_purchases.html">
-                                Query Purchases
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="show_inapp_messages.html">
-                                Show In-App Messages
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_nodes.html">
-                                Supporting Nodes
+                            <a class="nav-link active" href="launch_review.html">
+                                Launch In App Review
                             </a>
                         </li>
                         <hr />
@@ -189,18 +159,8 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="product_details.html">
-                                Product Details
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="purchase.html">
-                                Purchase
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="purchase_history_record.html">
-                                Purchase History Record
+                            <a class="nav-link inactive" href="review_error.html">
+                                Review Error
                             </a>
                         </li>
                         <li class="nav-item">
@@ -225,25 +185,26 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Launch Billing Flow</h1>
+                    <h1 class="h2 text-white-shadow">Launch In App Review</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            This is an asynchronous function which enables you to Launch a Google Play Billing window (powered by Google) for a purchase.
+                            This is an asynchronous function which launches the in-app review flow.
+                            You must wait until the user has completed the in-app review process before your app continues its normal flow.
                         </p>
                         <p class="content">
-                            The parameters include the Product ID (from the Google Play Console), Product Type, whether or not it is a personalised offer and optionally an Offer Token.</br>
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
                             Once the asynchronous operation has completed, one of two delegates will be called to handle
                             the success and failure situations.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            <span style="font-weight: 500">Note:</span> Google's policy requires that no matter the result, success or failure, you must continue your normal app flow.
                         </p>
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_LaunchBillingFlow.png" style="max-width: 70%;">
+                        <img src="../../../images/InAppReviews/InAppReview_Plugin_LaunchReviewFlow.png" style="max-width: 25%;">
                     </div>
                 </div>
                 <div style="padding-top: 30px">
@@ -251,10 +212,14 @@
                         <span class="badge badge-primary">1</span>
                         <div class="info">
                             <p class="content">
-                                <b>Product Id</b>
+                                <b>On Success</b>
+                            </p>
+                            <p class="content">
+                                A delegate that will be called once the user has completed the review process.
+                                The library does not indicate whether the user reviewed or not, or even whether the review dialog was shown.
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                The Product ID of the product to purchase. This ID can be sourced from the Google Play Console.
+                                You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
                     </div>
@@ -264,113 +229,16 @@
                         <span class="badge badge-primary">2</span>
                         <div class="info">
                             <p class="content">
-                                <b>Product Type</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                <a href="enumerations.html">Product Type</a> can either be Subscription or InApp products.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">3</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>Is Offer Personalised</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                Indicate whether or not the offer is personalised. </br>
-                                You must consult Art. 6 (1) (ea) CRD of the Consumer Rights Directive (<a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:02011L0083-20220528" target="_blank">2011/83/EU</a>) to determine if the price you are offering to users is personalized.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">4</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>Offer Token</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                A Token retrieved when <a href="query_product_details.html">Querying Product Details</a> which would indicate a specific offer on a Subscription's base plan. </br>
-                                This is not required for consumable/non-consumable in app purchases. </br>
-                                You can use the <a href="supporting_nodes.html">Get Subscription Offer Token</a> blueprint node to extract the desired offer token.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">5</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>On Success</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called when the player has successfully purchased the product.
-                                The delegate will produce a <a href="purchase.html">Purchase</a> object for you to use. </br>
-                                You can simply click and drag this pin to create a custom event.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">6</span>
-                        <div class="info">
-                            <p class="content">
                                 <b>On Failure</b>
                             </p>
+                            <p class="content">
+                                A delegate that will be called if there is an error attempting to launch the review flow.
+                                The delegate will produce an <a href="review_error.html">Review Error</a> for the developer to handle appropriately.
+                            </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called if there is an error launcching the billing flow.
-                                The delegate will produce a <a href="enumerations.html">Billing Response Code</a> and debug message for the developer to handle appropriately.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
-                    </div>
-                </div>
-                <div style="margin-top: 50px">
-                    <h1 class="h3">Examples</h1>
-                </div>
-                <div class="container"
-                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
-                    <div class="info">
-                        <p class="content">
-                            In the below example, we are initiating a purchase of an INAPP product given the product ID retrieved from the Google Play Console.</br>
-                            Depending on your use case, you can create your own function to handle the purchase of the in app product and reward the player appropriately. Similarly you can create your own method to handle errors.
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            For INAPP product purchases, there are no offer tokens required, so you can simply leave this field blank.
-                        </p>
-                    </div>
-                </div>
-                <div class="container"
-                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
-                    <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/LaunchBillingFlow_INAPP_Example.png" style="max-width: 80%;">
-                    </div>
-                </div>
-                <div class="container"
-                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
-                    <div class="info">
-                        <p class="content">
-                            In the below example, we are initiating a purchase of a Subscription product given the product ID retrieved from the Google Play Console.</br>
-                            Depending on your use case, you can create your own function to handle the purchase of the subscription product and reward the player appropriately. Similarly you can create your own method to handle errors.
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            The only difference here is the use of the provided <a href="supporting_nodes.html">Get Subscription Offer Token</a> quality of life blueprint node.</br>
-                            In the event when you have multiple base plans and/or offers on these base plans, you may want to choose which one to use.
-                            In this case, you would want to have saved the <b>Subscription Product Details</b> when <a href="query_product_details.html">Querying Subscription Product Details</a> to a variable to be used here.</br>
-                            In the event you do not have multiple offers/base plans on a subscription, you can simply leave the offer token blank and it will take the first (and only) offer seen.
-                        </p>
-                    </div>
-                </div>
-                <div class="container"
-                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
-                    <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/LaunchBillingFlow_SUBS_Example.png" style="max-width: 80%;">
                     </div>
                 </div>
                 <div style="margin-bottom: 300px">
