--- a/plugins/google-play-services/in-app-reviews/overview.html
+++ b/plugins/google-play-services/in-app-reviews/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Android Sensors</title>
+    <title>UE Plugin | In App Reviews</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -61,7 +61,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
                         aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/saved-games/overview.html">
+                            <a class="dropdown-item" href="../saved-games/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/events/overview.html">
+                            <a class="dropdown-item" href="../events/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/billing/overview.html">
+                            <a class="dropdown-item" href="../billing/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
                                         class="dropdown-item-image">
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-reviews/overview.html">
+                            <a class="dropdown-item" href="overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
@@ -140,43 +140,18 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="overview.html">
+                            <a class="nav-link active" href="overview.html">
                                 Overview
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="getting_started.html">
+                            <a class="nav-link inactive" href="getting_started.html">
                                 Getting Started
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_availability.html">
-                                Checking Sensor Availability
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="register_sensor.html">
-                                Registering a Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="deregister_sensor.html">
-                                Deregistering a Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_listener.html">
-                                Setup Sensor Event Listener
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_nodes.html">
-                                Supporting Nodes
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="example.html">
-                                Example Setup
+                            <a class="nav-link inactive" href="launch_review.html">
+                                Launch In App Review
                             </a>
                         </li>
                         <hr />
@@ -184,23 +159,13 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor.html">
-                                Sensor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="sensor_event.html">
-                                Sensor Event
+                            <a class="nav-link inactive" href="review_error.html">
+                                Review Error
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="enumerations.html">
                                 Enumerations
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="supporting_structs.html">
-                                Supporting Structs
                             </a>
                         </li>
                         <hr />
@@ -219,43 +184,55 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Getting Started</h1>
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">In App Review Overview (Still In Development)</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <ol class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                Purchase the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Link will be enabled once plugin is live!).
-                            </p>
-                            <li class="list-group-item">
-                                Install the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
-                                Go to the Library tab and find the plugin and add it to the engine.
-                            </p>
-                            <li class="list-group-item">
-                                Enable Android Sensors Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In Unreal Engine, the plugin will be available in the plugins section.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span
-                                    style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Android Sensors</span>" and ensure it is enabled.
-                            </p>
-                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                                <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 80%" src="../../../images/AndroidSensors/Android_Sensors_Plugin_Enabled.png">
-                                </div>
-                            </div>
-                        </ol>
+                        <p class="content">
+                            <b>The Google Play Service: In App Reviews</b>
+                        </p>
+                        <p class="content">
+                            he Google Play In-App Review service enables you to seamlessly request users to provide ratings and reviews on the Play Store, all within your app or game, eliminating the need for them to exit the app.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            By utilizing this service and adhering to Google's guidelines for <a href="https://developer.android.com/guide/playcore/in-app-review#when-to-request" target="_blank">timing review requests</a> to stay within the specified <a href="https://developer.android.com/guide/playcore/in-app-review#quotas" target="_blank">quotas</a>,
+                            you can enhance the probability of obtaining ratings and reviews for your app or game on the Google Play Store.
+                        </p>
                     </div>
-                </div>
-                <div style="margin-bottom: 450px">
+                    <div class="info" style="margin-top: 20px">
+                        <p class="content">
+                            <b>The Unreal Engine Plugin</b>
+                        </p>
+                        <p class="content">
+                            Introducing the Unreal Engine plugin for the In App Review Service, a powerful tool that brings the benifits of the built-in <span style="font-weight: 500">Google Play Core Library</span> directly to your Unreal Engine projects.
+                            This plugin is designed to expose the ability to request in-app reviews to blueprint scripting, simplifying the integration process for game developers.
+                        </p>
+                        <p class="content">
+                            Our plugin provides an intuitive and user-friendly interface seamlessly integrated into the Unreal Engine editor, making it effortless to make use of the service.
+                            Whether you're a seasoned Unreal Engine developer or new to the platform, our plugin empowers you to make use of the In App Review Service, thereby improving your chances of receiving ratings and reviews on the Google Play Store.
+                        </p>
+                        <p class="content">
+                            The plugin makes use of <span style="font-weight: 500">no additional libraries or
+                                imports</span>, but instead makes use of the built in google play services SDK already
+                            within Unreal Engine, meaning the size of your <span style="font-weight: 500">game bundle
+                                will hardly increase in size</span>.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The plugin does not interfere with any of Unreal Engine's existing functionality, meaning
+                            <span style="font-weight: 500">no compilation conflicts</span> with other Unreal Engine
+                            provided libraries can occur and <span style="font-weight: 500">all existing Google Play
+                                Services provided by Unreal Engine will work as expected</span>.
+                        </p>
+                    </div>
+                    <!-- <div class="info" style="margin-top: 20px"> -->
+                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
+                        <img src="../../../images/InAppReviews/InAppReviews_Plugin_AllNodes.png" style="width: 50%">
+                    </div>
+                    <!-- </div> -->
+                    <div style="margin-bottom: 400px">
+                    </div>
                 </div>
             </main>
         </div>
