touch up review error struct field names

--- a/plugins/google-play-services/in-app-reviews/review_error.html
+++ b/plugins/google-play-services/in-app-reviews/review_error.html
@@ -213,7 +213,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>ReviewErrorCode</td>
+                                <td>Code</td>
                                 <td>
                                     <a href="enumerations.html">EReviewErrorCode</a>
                                 </td>
