--- a/plugins/android-native/sensors/getting_started.html
+++ b/plugins/android-native/sensors/getting_started.html
@@ -229,7 +229,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Link will be enabled once plugin is live!).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/722eb691baa841e38980747f93647b93" target="_blank">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
