--- a/plugins/google-play-services/in-app-reviews/getting_started.html
+++ b/plugins/google-play-services/in-app-reviews/getting_started.html
@@ -194,7 +194,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Link will be enabled once plugin is live!).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/1c698a6555714f28b0edc0cd37204d7d" target="_blank">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
