--- a/plugins/google-play-services/in-app-updates/is_update_type_allowed.html
+++ b/plugins/google-play-services/in-app-updates/is_update_type_allowed.html
@@ -97,12 +97,24 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="overview.html">
+                            <a class="dropdown-item" href="../in-app-reviews/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
                                     <div class="dropdown-item-text">
                                         Play: Reviews
+                                        <span class="dropdown-item-subtext">Android Plugin</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="overview.html">
+                                <div class="dropdown-item-content">
+                                    <img src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Reviews"
+                                        class="dropdown-item-image">
+                                    <div class="dropdown-item-text">
+                                        Play: Updates
                                         <span class="dropdown-item-subtext">Android Plugin</span>
                                     </div>
                                 </div>
@@ -239,7 +251,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/InAppReviews/InAppReview_Plugin_LaunchReviewFlow.png" style="max-width: 25%;">
+                        <img src="../../../images/InAppUpdates/InAppUpdates_Plugin_IsUpdateTypeAllowed.png" style="max-width: 40%;">
                     </div>
                 </div>
                 <div style="padding-top: 30px">
