--- a/plugins/google-play-services/in-app-updates/overview.html
+++ b/plugins/google-play-services/in-app-updates/overview.html
@@ -109,6 +109,18 @@
                             </a>
                         </li>
                         <li>
+                            <a class="dropdown-item" href="overview.html">
+                                <div class="dropdown-item-content">
+                                    <img src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Reviews"
+                                        class="dropdown-item-image">
+                                    <div class="dropdown-item-text">
+                                        Play: Updates
+                                        <span class="dropdown-item-subtext">Android Plugin</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
                             <a class="dropdown-item" href="../../android-native/sensors/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors"
@@ -264,7 +276,7 @@
                     </div>
                     <!-- <div class="info" style="margin-top: 20px"> -->
                     <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/InAppReviews/InAppReviews_Plugin_AllNodes.png" style="width: 50%">
+                        <img src="../../../images/InAppUpdates/InAppUpdates_Plugin_AllNodes.png" style="width: 70%">
                     </div>
                     <!-- </div> -->
                     <div style="margin-bottom: 400px">
