--- a/plugins/google-play-services/in-app-updates/install_error.html
+++ b/plugins/google-play-services/in-app-updates/install_error.html
@@ -97,12 +97,24 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="overview.html">
+                            <a class="dropdown-item" href="../in-app-reviews/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
                                     <div class="dropdown-item-text">
                                         Play: Reviews
+                                        <span class="dropdown-item-subtext">Android Plugin</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="overview.html">
+                                <div class="dropdown-item-content">
+                                    <img src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Reviews"
+                                        class="dropdown-item-image">
+                                    <div class="dropdown-item-text">
+                                        Play: Updates
                                         <span class="dropdown-item-subtext">Android Plugin</span>
                                     </div>
                                 </div>
