--- a/plugins/google-play-services/events/contact.html
+++ b/plugins/google-play-services/events/contact.html
@@ -99,7 +99,7 @@
                         <li>
                             <a class="dropdown-item" href="../in-app-reviews/overview.html">
                                 <div class="dropdown-item-content">
-                                    <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
+                                    <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Updates"
                                         class="dropdown-item-image">
                                     <div class="dropdown-item-text">
                                         Play: Reviews
